--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="js/downloadKpisTabAsHTML.js"></script>
+    <script src="js/downloadInformeTabsHTML.js"></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
@@ -445,16 +446,14 @@
               Informe Ejecutivo
             </h2>
 
-            <!-- PARCHE: Descargar Informe Ejecutivo como HTML -->
-
-            <!-- <button
+            <button
               type="button"
               onclick="downloadInformeTabAsHTML()"
               class="bg-gray-900 text-white px-4 py-2 rounded-lg hover:bg-gray-800"
               title="Descarga esta pestaña (Informe Ejecutivo) en HTML"
             >
               Descargar HTML
-            </button> -->
+            </button>
           </div>
           <!-- Filtro de Incidencias (encabezado) -->
           <div class="mb-6">
@@ -1102,7 +1101,7 @@
       function formatForInput(iso) {
         if (!iso) return "";
         const d = dayjs(iso);
-        return d.isValid() ? d.format("YYYY-MM-DDTHH:mm") : "";
+        return d.isValid() ? d.format("YYYY-MM-DDT HH:mm") : "";
       }
 
       function checkTimeDeviation(prog, real) {
@@ -1461,14 +1460,33 @@
           c.innerHTML = `<div class="col-span-full text-center p-10 bg-white rounded-xl shadow"><h3 class="text-lg">No hay despachos para esta fecha</h3></div>`;
           return;
         }
+
+        // Contar registros por unidad para agregar tramos
+        const unidadCount = {};
+        const unidadIndex = {};
         filteredDespachosData.forEach((d) => {
+          const unidadNombre = String(d.unidad || "").trim();
+          unidadCount[unidadNombre] = (unidadCount[unidadNombre] || 0) + 1;
+          unidadIndex[unidadNombre] = 0;
+        });
+
+        filteredDespachosData.forEach((d) => {
+          // Determinar número de tramo si hay múltiples registros
+          const unidadNombre = String(d.unidad || "").trim();
+          const tieneMultiplesTramos = unidadCount[unidadNombre] > 1;
+          unidadIndex[unidadNombre] = (unidadIndex[unidadNombre] || 0) + 1;
+          const numeroTramo = unidadIndex[unidadNombre];
+          const tramoLabel = tieneMultiplesTramos
+            ? ` - Tramo ${numeroTramo}`
+            : "";
+
           c.innerHTML += `
             <div class="bg-white p-5 rounded-xl shadow-lg border border-gray-100">
               <div class="flex justify-between items-start mb-3">
                 <div>
                   <h3 class="font-bold text-lg text-blue-800">${escapeHtml(
                     d.unidad
-                  )}</h3>
+                  )}${tramoLabel}</h3>
                   <p class="text-sm text-gray-500">${escapeHtml(d.placas)}</p>
                 </div>
                 <span class="bg-blue-100 text-blue-800 text-xs font-semibold px-2.5 py-0.5 rounded-full">
@@ -1492,7 +1510,26 @@
           c.innerHTML = `<div class="col-span-full text-center p-10 bg-white rounded-xl shadow"><h3 class="text-lg">Sin datos de rutas</h3></div>`;
           return;
         }
+
+        // Contar registros por unidad para agregar tramos
+        const unidadCount = {};
+        const unidadIndex = {};
         filteredDespachosData.forEach((d) => {
+          const unidadNombre = String(d.unidad || "").trim();
+          unidadCount[unidadNombre] = (unidadCount[unidadNombre] || 0) + 1;
+          unidadIndex[unidadNombre] = 0;
+        });
+
+        filteredDespachosData.forEach((d) => {
+          // Determinar número de tramo si hay múltiples registros
+          const unidadNombre = String(d.unidad || "").trim();
+          const tieneMultiplesTramos = unidadCount[unidadNombre] > 1;
+          unidadIndex[unidadNombre] = (unidadIndex[unidadNombre] || 0) + 1;
+          const numeroTramo = unidadIndex[unidadNombre];
+          const tramoLabel = tieneMultiplesTramos
+            ? ` - Tramo ${numeroTramo}`
+            : "";
+
           const origenUrl = `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(
             d.origen || ""
           )}`;
@@ -1503,7 +1540,7 @@
             <div class="bg-white p-5 rounded-xl shadow border">
               <h3 class="font-bold text-lg text-blue-800">${escapeHtml(
                 d.unidad
-              )}</h3>
+              )}${tramoLabel}</h3>
               <p class="text-sm text-gray-500">${escapeHtml(d.ruta)}</p>
               <p class="text-sm mt-2"><strong>Origen:</strong>
                 <a href="${origenUrl}" target="_blank" class="text-blue-600 underline">${escapeHtml(
@@ -1572,6 +1609,15 @@
           (d) => d.cliente === clienteSeleccionado
         );
 
+        // Contar registros por unidad para agregar tramos
+        const unidadCount = {};
+        const unidadIndex = {};
+        unidadesFiltradas.forEach((d) => {
+          const unidadNombre = String(d.unidad || "").trim();
+          unidadCount[unidadNombre] = (unidadCount[unidadNombre] || 0) + 1;
+          unidadIndex[unidadNombre] = 0;
+        });
+
         const unidadSelect = document.getElementById("unidad-select");
         if (!unidadSelect) return;
 
@@ -1579,9 +1625,18 @@
           '<option value="">-- Selecciona Unidad --</option>';
 
         unidadesFiltradas.forEach((d) => {
+          // Determinar número de tramo si hay múltiples registros
+          const unidadNombre = String(d.unidad || "").trim();
+          const tieneMultiplesTramos = unidadCount[unidadNombre] > 1;
+          unidadIndex[unidadNombre] = (unidadIndex[unidadNombre] || 0) + 1;
+          const numeroTramo = unidadIndex[unidadNombre];
+          const tramoLabel = tieneMultiplesTramos
+            ? ` - Tramo ${numeroTramo}`
+            : "";
+
           const opt = document.createElement("option");
           opt.value = d.index; // Usar índice original
-          opt.textContent = `${d.unidad} - ${d.operador}`;
+          opt.textContent = `${d.unidad}${tramoLabel} - ${d.operador}`;
           unidadSelect.appendChild(opt);
         });
       }
@@ -1589,11 +1644,29 @@
         const sel = document.getElementById("unidad-selector");
         if (!sel) return;
 
+        // Contar registros por unidad para agregar tramos
+        const unidadCount = {};
+        const unidadIndex = {};
+        filteredDespachosData.forEach((d) => {
+          const unidadNombre = String(d.unidad || "").trim();
+          unidadCount[unidadNombre] = (unidadCount[unidadNombre] || 0) + 1;
+          unidadIndex[unidadNombre] = 0;
+        });
+
         sel.innerHTML = '<option value="">-- Seleccione unidad --</option>';
         filteredDespachosData.forEach((d, i) => {
+          // Determinar número de tramo si hay múltiples registros
+          const unidadNombre = String(d.unidad || "").trim();
+          const tieneMultiplesTramos = unidadCount[unidadNombre] > 1;
+          unidadIndex[unidadNombre] = (unidadIndex[unidadNombre] || 0) + 1;
+          const numeroTramo = unidadIndex[unidadNombre];
+          const tramoLabel = tieneMultiplesTramos
+            ? ` - Tramo ${numeroTramo}`
+            : "";
+
           sel.innerHTML += `<option value="${i}">${escapeHtml(
             d.unidad
-          )}</option>`;
+          )}${tramoLabel}</option>`;
         });
         document.getElementById("consulta-btn").disabled = true;
         document
@@ -1720,6 +1793,10 @@
         const el = document.getElementById("incidencias-list");
         if (el)
           el.innerHTML = renderIncidencias(d.incidencias, despachoIndex, true);
+
+        // Actualizar estado del botón Guardar
+        updateGuardarButtonState(despachoIndex);
+
         renderRegistroDespacho();
         renderIncidenciasExecutiveReport();
       }
@@ -2167,7 +2244,7 @@
                       Ver protocolo
                     </button>
 
-                    <button type="button" onclick="saveSeguimiento(${index})" ${disabled}
+                    <button type="button" id="btn-guardar-seguimiento-${index}" onclick="saveSeguimiento(${index})" ${disabled}
                       class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 disabled:bg-gray-400">
                       Guardar
                     </button>
@@ -2181,7 +2258,24 @@
             </div>
           </form>`;
         container.classList.remove("hidden");
-        setTimeout(handleIncidenciaTipoChange, 0);
+        setTimeout(() => {
+          handleIncidenciaTipoChange();
+          updateGuardarButtonState(index);
+        }, 0);
+      }
+
+      // Validar estado del botón Guardar según incidencias
+      function updateGuardarButtonState(index) {
+        const d = filteredDespachosData[index];
+        const btn = document.getElementById(`btn-guardar-seguimiento-${index}`);
+        if (!btn || userRole !== "editor") return;
+
+        const hasIncidencias =
+          Array.isArray(d?.incidencias) && d.incidencias.length > 0;
+        btn.disabled = !hasIncidencias;
+        btn.title = hasIncidencias
+          ? "Guardar seguimiento"
+          : "Debe agregar al menos una incidencia para guardar";
       }
 
       // ✅ ÚNICA addIncidencia (con envío a Make)
@@ -2217,6 +2311,9 @@
 
         const el = document.getElementById("incidencias-list");
         if (el) el.innerHTML = renderIncidencias(d.incidencias, index, true);
+
+        // Habilitar botón Guardar después de agregar incidencia
+        updateGuardarButtonState(index);
 
         renderRegistroDespacho();
         renderIncidenciasExecutiveReport();
@@ -2257,8 +2354,15 @@
 
       function saveSeguimiento(index) {
         if (userRole !== "editor") return;
-        const form = document.getElementById("form-seguimiento");
+
         const d = filteredDespachosData[index];
+        // Validar que haya al menos una incidencia
+        if (!Array.isArray(d?.incidencias) || d.incidencias.length === 0) {
+          alert("Debe agregar al menos una incidencia antes de guardar.");
+          return;
+        }
+
+        const form = document.getElementById("form-seguimiento");
 
         d.operadorMonitoreoId =
           form.elements["operadorMonitoreoId"]?.value || "";
@@ -2554,6 +2658,15 @@
           return;
         }
 
+        // Contar registros por unidad para agregar tramos
+        const unidadCount = {};
+        const unidadIndex = {};
+        data.forEach((d) => {
+          const unidadNombre = String(d.unidad || "").trim();
+          unidadCount[unidadNombre] = (unidadCount[unidadNombre] || 0) + 1;
+          unidadIndex[unidadNombre] = 0;
+        });
+
         const board = document.createElement("div");
         board.className = "registro-board";
 
@@ -2579,6 +2692,15 @@
           const row = document.createElement("div");
           row.className = "board-row";
 
+          // Determinar número de tramo si hay múltiples registros
+          const unidadNombre = String(d.unidad || "").trim();
+          const tieneMultiplesTramos = unidadCount[unidadNombre] > 1;
+          unidadIndex[unidadNombre] = (unidadIndex[unidadNombre] || 0) + 1;
+          const numeroTramo = unidadIndex[unidadNombre];
+          const tramoLabel = tieneMultiplesTramos
+            ? ` - Tramo ${numeroTramo}`
+            : "";
+
           const gpsOk =
             String(d.gpsValidacionEstado || "")
               .trim()
@@ -2593,7 +2715,7 @@
               <span class="inline-block w-3 h-3 rounded-full ${dotClass}" title="GPS: ${escapeHtml(
             d.gpsValidacionEstado || "Sin registro"
           )}"></span>
-              <strong>${escapeHtml(d.unidad)}</strong>
+              <strong>${escapeHtml(d.unidad)}${tramoLabel}</strong>
             </div>
             <p class="text-xs">${escapeHtml(d.placas)}</p>
             <p class="text-xs italic">${
@@ -2781,7 +2903,42 @@
                 data.filter((d) => d.estatus === "En ruta").length
               }</p></div>
             </div>
-          </div>`;
+          </div>
+
+          <div class="bg-white border rounded-xl p-4 pt-2">
+            <h3 class="text-lg font-semibold pl-4">Detalle</h3>
+            <table class="min-w-full text-sm border rounded-lg overflow-hidden">
+              <thead class="bg-gray-50">
+                <tr>
+                  <th class="px-4 py-2 text-left">Unidad</th>
+                  <th class="px-4 py-2 text-left">Ruta</th>
+                  <th class="px-4 py-2 text-left">Estatus</th>
+                  <th class="px-4 py-2 text-left">Prog. Descarga</th>
+                  <th class="px-4 py-2 text-left">Real Descarga</th>
+                </tr>
+              </thead>
+              <tbody class="divide-y bg-white">
+                ${data
+                  .map(
+                    (d) => `
+                  <tr>
+                    <td class="px-4 py-2 font-semibold">${escapeHtml(
+                      d.unidad
+                    )}</td>
+                    <td class="px-4 py-2">${escapeHtml(d.ruta)}</td>
+                    <td class="px-4 py-2">${escapeHtml(d.estatus)}</td>
+                    <td class="px-4 py-2">${formatDateTime(d.citaDescarga)}</td>
+                    <td class="px-4 py-2 font-semibold">${formatDateTime(
+                      d.realDescarga
+                    )}</td>
+                  </tr>
+                `
+                  )
+                  .join("")}
+              </tbody>
+            </table>
+          </div>
+          `;
       }
 
       function downloadReportAsExcel() {
