--- a/src/index.html
+++ b/src/index.html
@@ -1264,9 +1264,15 @@
       }
 
       function formatDateTime(iso) {
-        return iso && dayjs(iso).isValid()
-          ? dayjs(iso).format("DD/MM/YYYY HH:mm:ss")
-          : "-";
+        if (!iso || !dayjs(iso).isValid()) return "-";
+        const d = dayjs(iso);
+        const date = d.format("DD/MM/YYYY");
+        const hour = d.hour();
+        const minute = d.format("mm");
+        const second = d.format("ss");
+        const hour12 = hour === 0 ? 12 : hour > 12 ? hour - 12 : hour;
+        const ampm = hour < 12 ? "a.m." : "p.m.";
+        return `${date} ${String(hour12).padStart(2, "0")}:${minute}:${second} ${ampm}`;
       }
       function formatForInput(iso) {
         if (!iso) return "";
@@ -3209,6 +3215,7 @@
 
           <div class="bg-white border rounded-xl p-4 pt-2">
             <h3 class="text-lg font-semibold pl-4">Detalle</h3>
+            <div class="overflow-x-auto">
             <table class="min-w-full text-sm border rounded-lg overflow-hidden">
               <thead class="bg-gray-50">
                 <tr>
@@ -3217,6 +3224,7 @@
                   <th class="px-4 py-2 text-left">Estatus</th>
                   <th class="px-4 py-2 text-left">Prog. Descarga</th>
                   <th class="px-4 py-2 text-left">Real Descarga</th>
+                  <th class="px-4 py-2 text-left min-w-[200px]">Observaciones</th>
                 </tr>
               </thead>
               <tbody class="divide-y bg-white">
@@ -3233,12 +3241,16 @@
                     <td class="px-4 py-2 font-semibold">${formatDateTime(
                       d.realDescarga,
                     )}</td>
+                    <td class="px-4 py-2 text-gray-600 text-xs">${escapeHtml(
+                      d.observaciones || "-",
+                    )}</td>
                   </tr>
                 `,
                   )
                   .join("")}
               </tbody>
             </table>
+            </div>
           </div>
           `;
       }
@@ -3261,6 +3273,7 @@
           Estatus: d.estatus,
           "Prog Descarga": formatDateTime(d.citaDescarga),
           "Real Descarga": formatDateTime(d.realDescarga),
+          Observaciones: d.observaciones || "",
           Incidencias: (d.incidencias || [])
             .map((i) => `${i.tipo} (${formatDateTime(i.fecha)})`)
             .join("; "),
@@ -3302,6 +3315,7 @@
           "Real Descarga": formatDateTime(d.realDescarga),
           ConfirmacionEntrega: d.confirmacionEntrega,
           Estatus: d.estatus,
+          Observaciones: d.observaciones || "",
           Incidencias: (d.incidencias || [])
             .map((i) => `${i.tipo} (${formatDateTime(i.fecha)})`)
             .join("; "),
