Eliminar numeración de tabs en index.html para mejorar la claridad y consistencia del diseño

--- a/src/index.html
+++ b/src/index.html
@@ -206,49 +206,49 @@
           class="tab-btn tab-active"
           onclick="changeTab(0)"
         >
-          01. Datos Generales
+          Datos Generales
         </button>
         <button
           id="tab-btn-1"
           class="tab-btn text-gray-500"
           onclick="changeTab(1)"
         >
-          02. Rutas & Origen/Destino
+          Rutas & Origen/Destino
         </button>
         <button
           id="tab-btn-2"
           class="tab-btn text-gray-500"
           onclick="changeTab(2)"
         >
-          03. Seguimiento Detallado
+          Seguimiento Detallado
         </button>
         <button
           id="tab-btn-3"
           class="tab-btn text-gray-500"
           onclick="changeTab(3)"
         >
-          04. Matriz de Registro
+          Matriz de Registro
         </button>
         <button
           id="tab-btn-4"
           class="tab-btn text-gray-500"
           onclick="changeTab(4)"
         >
-          05. KPIs de Cumplimiento
+          KPIs de Cumplimiento
         </button>
         <button
           id="tab-btn-5"
           class="tab-btn text-gray-500"
           onclick="changeTab(5)"
         >
-          06. Informe Ejecutivo
+          Informe Ejecutivo
         </button>
         <button
           id="tab-btn-6"
           class="tab-btn text-gray-500"
           onclick="changeTab(6)"
         >
-          07. Informes Guardados
+          Informes Guardados
         </button>
       </div>
 
